--- a/jupyter_notebooks/01 - DataCollection.ipynb
+++ b/jupyter_notebooks/01 - DataCollection.ipynb
@@ -188,49 +188,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting kaggle==1.5.12\n",
-      "  Downloading kaggle-1.5.12.tar.gz (58 kB)\n",
-      "  Installing build dependencies: started\n",
-      "  Installing build dependencies: finished with status 'done'\n",
-      "  Getting requirements to build wheel: started\n",
-      "  Getting requirements to build wheel: finished with status 'done'\n",
-      "  Preparing metadata (pyproject.toml): started\n",
-      "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
+      "Requirement already satisfied: kaggle==1.5.12 in c:\\users\\kathr\\nextcloud\\dokumente\\karriere\\projekte\\vscode-projects\\pp5\\churnometer\\.venv\\lib\\site-packages (1.5.12)\n",
       "Requirement already satisfied: six>=1.10 in c:\\users\\kathr\\nextcloud\\dokumente\\karriere\\projekte\\vscode-projects\\pp5\\churnometer\\.venv\\lib\\site-packages (from kaggle==1.5.12) (1.17.0)\n",
       "Requirement already satisfied: certifi in c:\\users\\kathr\\nextcloud\\dokumente\\karriere\\projekte\\vscode-projects\\pp5\\churnometer\\.venv\\lib\\site-packages (from kaggle==1.5.12) (2025.10.5)\n",
       "Requirement already satisfied: python-dateutil in c:\\users\\kathr\\nextcloud\\dokumente\\karriere\\projekte\\vscode-projects\\pp5\\churnometer\\.venv\\lib\\site-packages (from kaggle==1.5.12) (2.9.0.post0)\n",
       "Requirement already satisfied: requests in c:\\users\\kathr\\nextcloud\\dokumente\\karriere\\projekte\\vscode-projects\\pp5\\churnometer\\.venv\\lib\\site-packages (from kaggle==1.5.12) (2.32.5)\n",
       "Requirement already satisfied: tqdm in c:\\users\\kathr\\nextcloud\\dokumente\\karriere\\projekte\\vscode-projects\\pp5\\churnometer\\.venv\\lib\\site-packages (from kaggle==1.5.12) (4.67.1)\n",
-      "Collecting python-slugify (from kaggle==1.5.12)\n",
-      "  Using cached python_slugify-8.0.4-py2.py3-none-any.whl.metadata (8.5 kB)\n",
+      "Requirement already satisfied: python-slugify in c:\\users\\kathr\\nextcloud\\dokumente\\karriere\\projekte\\vscode-projects\\pp5\\churnometer\\.venv\\lib\\site-packages (from kaggle==1.5.12) (8.0.4)\n",
       "Requirement already satisfied: urllib3 in c:\\users\\kathr\\nextcloud\\dokumente\\karriere\\projekte\\vscode-projects\\pp5\\churnometer\\.venv\\lib\\site-packages (from kaggle==1.5.12) (2.5.0)\n",
-      "Collecting text-unidecode>=1.3 (from python-slugify->kaggle==1.5.12)\n",
-      "  Using cached text_unidecode-1.3-py2.py3-none-any.whl.metadata (2.4 kB)\n",
+      "Requirement already satisfied: text-unidecode>=1.3 in c:\\users\\kathr\\nextcloud\\dokumente\\karriere\\projekte\\vscode-projects\\pp5\\churnometer\\.venv\\lib\\site-packages (from python-slugify->kaggle==1.5.12) (1.3)\n",
       "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\users\\kathr\\nextcloud\\dokumente\\karriere\\projekte\\vscode-projects\\pp5\\churnometer\\.venv\\lib\\site-packages (from requests->kaggle==1.5.12) (3.4.4)\n",
       "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\kathr\\nextcloud\\dokumente\\karriere\\projekte\\vscode-projects\\pp5\\churnometer\\.venv\\lib\\site-packages (from requests->kaggle==1.5.12) (3.11)\n",
       "Requirement already satisfied: colorama in c:\\users\\kathr\\nextcloud\\dokumente\\karriere\\projekte\\vscode-projects\\pp5\\churnometer\\.venv\\lib\\site-packages (from tqdm->kaggle==1.5.12) (0.4.6)\n",
-      "Using cached python_slugify-8.0.4-py2.py3-none-any.whl (10 kB)\n",
-      "Using cached text_unidecode-1.3-py2.py3-none-any.whl (78 kB)\n",
-      "Building wheels for collected packages: kaggle\n",
-      "  Building wheel for kaggle (pyproject.toml): started\n",
-      "  Building wheel for kaggle (pyproject.toml): finished with status 'done'\n",
-      "  Created wheel for kaggle: filename=kaggle-1.5.12-py3-none-any.whl size=73088 sha256=218beec32724faba150dc7190298e425af75d8db265ca826d2d29d8231a12869\n",
-      "  Stored in directory: c:\\users\\kathr\\appdata\\local\\pip\\cache\\wheels\\f5\\69\\4d\\d701fc604b9fb09be59718b4056fd5556a22588ce1f25dd090\n",
-      "Successfully built kaggle\n",
-      "Installing collected packages: text-unidecode, python-slugify, kaggle\n",
-      "\n",
-      "   ------------- -------------------------- 1/3 [python-slugify]\n",
-      "   ------------- -------------------------- 1/3 [python-slugify]\n",
-      "   ------------- -------------------------- 1/3 [python-slugify]\n",
-      "   -------------------------- ------------- 2/3 [kaggle]\n",
-      "   -------------------------- ------------- 2/3 [kaggle]\n",
-      "   -------------------------- ------------- 2/3 [kaggle]\n",
-      "   -------------------------- ------------- 2/3 [kaggle]\n",
-      "   -------------------------- ------------- 2/3 [kaggle]\n",
-      "   -------------------------- ------------- 2/3 [kaggle]\n",
-      "   ---------------------------------------- 3/3 [kaggle]\n",
-      "\n",
-      "Successfully installed kaggle-1.5.12 python-slugify-8.0.4 text-unidecode-1.3\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -288,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "id": "LVlh18YgbyEg"
    },
@@ -338,27 +307,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "id": "Rc45oPyntryo"
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading telecom-churn-dataset.zip to inputs/datasets/raw\n",
-      "\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "  0%|          | 0.00/172k [00:00<?, ?B/s]\n",
-      "100%|██████████| 172k/172k [00:00<00:00, 708kB/s]\n",
-      "100%|██████████| 172k/172k [00:00<00:00, 708kB/s]\n"
+      "Traceback (most recent call last):\n",
+      "  File \"<frozen runpy>\", line 198, in _run_module_as_main\n",
+      "  File \"<frozen runpy>\", line 88, in _run_code\n",
+      "  File \"c:\\Users\\kathr\\Nextcloud\\Dokumente\\Karriere\\Projekte\\vscode-projects\\PP5\\churnometer\\.venv\\Scripts\\kaggle.exe\\__main__.py\", line 2, in <module>\n",
+      "  File \"c:\\Users\\kathr\\Nextcloud\\Dokumente\\Karriere\\Projekte\\vscode-projects\\PP5\\churnometer\\.venv\\Lib\\site-packages\\kaggle\\__init__.py\", line 23, in <module>\n",
+      "    api.authenticate()\n",
+      "  File \"c:\\Users\\kathr\\Nextcloud\\Dokumente\\Karriere\\Projekte\\vscode-projects\\PP5\\churnometer\\.venv\\Lib\\site-packages\\kaggle\\api\\kaggle_api_extended.py\", line 164, in authenticate\n",
+      "    raise IOError('Could not find {}. Make sure it\\'s located in'\n",
+      "OSError: Could not find kaggle.json. Make sure it's located in c:\\Users\\kathr\\Nextcloud\\Dokumente\\Karriere\\Projekte\\vscode-projects\\PP5\\churnometer. Or use the environment method.\n"
      ]
     }
    ],
@@ -379,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "bxYIDRGLtryp"
    },
@@ -388,7 +354,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ All ZIP files extracted and deleted.\n"
+      "All ZIP files extracted and deleted.\n"
      ]
     }
    ],
@@ -433,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "id": "CjEM52Z1YLRP"
    },
@@ -640,7 +606,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "id": "YtKKWuPhg7r8"
    },
@@ -724,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "id": "3om7yFYAH1vl"
    },
@@ -787,7 +753,7 @@
        "[0 rows x 21 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "id": "FRqGWi0Uk27X"
    },
@@ -827,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "id": "fJvKpZQDhQc3"
    },
@@ -838,7 +804,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "id": "9ivG1m2Ntryw"
    },
@@ -869,7 +835,7 @@
        "array(['No', 'Yes'], dtype=object)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "AX5SeWxpxg8z"
    },
@@ -900,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "id": "W6vlA0ZxyHeO"
    },
@@ -908,10 +874,10 @@
     {
      "data": {
       "text/plain": [
-       "dtype('O')"
+       "dtype('int64')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,11 +897,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "aKlnIozA4eQO"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[WinError 183] Cannot create a file when that file already exists: 'outputs/datasets/collection'\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
