--- a/jupyter_notebooks/06 - Modeling and Evaluation - Predict Tenure.ipynb
+++ b/jupyter_notebooks/06 - Modeling and Evaluation - Predict Tenure.ipynb
@@ -45,6 +45,16 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import warnings\n",
+        "warnings.simplefilter(action='ignore', category=FutureWarning)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -189,7 +199,7 @@
         "from sklearn.ensemble import AdaBoostRegressor\n",
         "from sklearn.ensemble import ExtraTreesRegressor\n",
         "\n",
-        "\n",
+        "# now data cleaning, feature engineering and modelling all in one pipeline because we dont have to handle target imbalance\n",
         "def PipelineOptimization(model):\n",
         "    pipeline_base = Pipeline([\n",
         "\n",
@@ -246,7 +256,7 @@
         "    def fit(self, X, y, cv, n_jobs, verbose=1, scoring=None, refit=False):\n",
         "        for key in self.keys:\n",
         "            print(f\"\\nRunning GridSearchCV for {key} \\n\")\n",
-        "            model = PipelineOptimization(self.models[key])\n",
+        "            model = PipelineOptimization(self.models[key]) # different Pipeline name here\n",
         "\n",
         "            params = self.params[key]\n",
         "            gs = GridSearchCV(model, params, cv=cv, n_jobs=n_jobs,\n",
@@ -307,7 +317,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(\n",
         "    df.drop(['tenure'], axis=1),\n",
-        "    df['tenure'],\n",
+        "    df['tenure'], # Tenure = target variable\n",
         "    test_size=0.2,\n",
         "    random_state=0\n",
         ")\n",
@@ -342,6 +352,7 @@
       },
       "outputs": [],
       "source": [
+        "# linear and treebased models -> Regressor models\n",
         "models_quick_search = {\n",
         "    'LinearRegression': LinearRegression(),\n",
         "    \"DecisionTreeRegressor\": DecisionTreeRegressor(random_state=0),\n",
@@ -380,6 +391,7 @@
       },
       "outputs": [],
       "source": [
+        "# R2 set as performance metric -> defined in the business case\n",
         "search = HyperparameterOptimizationSearch(models=models_quick_search, params=params_quick_search)\n",
         "search.fit(X_train, y_train, scoring='r2', n_jobs=-1, cv=5)"
       ]
@@ -390,7 +402,9 @@
         "id": "c7p56nXeoqWo"
       },
       "source": [
-        "Check results"
+        "Check results\n",
+        "\n",
+        "GradientBoostingRegressor has best mean score with 0.46 which is lower than in our business case -> try to improve that with extensive hyperparameter search"
       ]
     },
     {
@@ -478,7 +492,9 @@
         "id": "wtNJJpLEAzdP"
       },
       "source": [
-        "Check results"
+        "Check results\n",
+        "\n",
+        "looks like the performance hasnt increased, still 0.46"
       ]
     },
     {
@@ -603,11 +619,27 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "from all 17 features we loaded at the beginning of the notebook, only 4 are relevant to\n",
+        "predict tenure, and Monthly Charges and Contract look to be the most relevant among these 4."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "QzNyQirSKJj6"
       },
       "source": [
         "## Evaluate on Train and Test Sets"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We are now interested to understand how this pipeline performs,\n",
+        "does it meet the requirement we stated in our business case?"
       ]
     },
     {
@@ -666,7 +698,20 @@
         "id": "tV-W5nYyBPdk"
       },
       "source": [
-        "Evaluate Performance"
+        "Evaluate Performance\n",
+        "\n",
+        "R2 score of 0.7 (business case) is not met. Also predictions dont follow the actual values too closely\n",
+        "\n",
+        "Note, that we could have added more hyperparameters in the extensive search or considered more algorithms.\n",
+        "The reason we selected fewer hyperparameter combinations in the notebook\n",
+        "was to train all possible models more quickly.\n",
+        "\n",
+        "So in your project you may want to consider more hyperparameters.\n",
+        "If your hyperparameter combination almost reaches your performance criteria,\n",
+        "then you may want to add a few more hyperparameters with\n",
+        "the expectation that it would reach the performance we stated in the business case.\n",
+        "\n",
+        "However, in this example, as our performance is very low, we'll explore other strategies."
       ]
     },
     {
@@ -694,7 +739,30 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Let's explore potential values for PCA n_components."
+        "At this point we need to ask ourselves what should we do? Does this mean the data doesn't\n",
+        "have patterns to predict tenure properly for a prospect that will likely churn?\n",
+        "Or is there any other strategy we could take, like before delivering this pipeline as our solution?\n",
+        "\n",
+        "One strategy we can consider is to replace the feature selection step\n",
+        "for a PCA (Principal Component Analysis) step\n",
+        "\n",
+        "A PCA transformation aims to find out what features explain the most variance in your data.\n",
+        "It gets the features and reduces them to a smaller set of variables,\n",
+        "called components. Each component retains the most valuable parts of all of the variables.\n",
+        "\n",
+        "After this, the expectation is that the model will receive data in a\n",
+        "format that can better learn the relationship between the features\n",
+        "and the target. Therefore, the idea is to replace the feature selection step with a PCA step."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Let's explore potential values for PCA n_components.\n",
+        "\n",
+        "First we need to\n",
+        "prepare the data by applying the data cleaning, feature engineering and feature scaling steps."
       ]
     },
     {
@@ -703,8 +771,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "pipeline = PipelineOptimization(model=LinearRegression())\n",
-        "pipeline_pca = Pipeline(pipeline.steps[:3])\n",
+        "pipeline = PipelineOptimization(model=LinearRegression()) # use linearRegression only to instantiate the pipeline\n",
+        "pipeline_pca = Pipeline(pipeline.steps[:3]) # subset neccessary steps from our pipeline\n",
         "df_pca = pipeline_pca.fit_transform(df.drop(['tenure'], axis=1))\n",
         "\n",
         "print(df_pca.shape,'\\n', type(df_pca))"
@@ -726,6 +794,7 @@
         "import numpy as np\n",
         "from sklearn.decomposition import PCA\n",
         "\n",
+        "# initially set the number of components as the number of columns the data has.\n",
         "n_components = 17\n",
         "\n",
         "\n",
@@ -759,6 +828,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        " all components together explain 100% of the data.\n",
+        "Our task now is to select a number that will explain enough of the data for our task.\n",
+        "\n",
+        "We notice that the first 3 components, individually, are more relevant than the others, together they sum\n",
+        "47% of the data variation. Ideally, we would like to have 3 or 4 components with 70%, 80%\n",
+        "or even more of the data variation, but that is not always the case.\n",
+        "\n",
+        "We note that seven components are responsible for 72% of the data variation,\n",
+        "so we are ok with this as a first attempt since they hold most of the data variation"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -774,7 +858,15 @@
         "id": "5eaMf41ZBhBk"
       },
       "source": [
-        "## Rewrite ML Pipeline for Modelling"
+        "## Rewrite ML Pipeline for Modelling\n",
+        "\n",
+        "Once we know the number of components to try, we can rewrite our pipeline steps\n",
+        "replacing the feature selection step with the PCA step using just 7 components.\n",
+        "\n",
+        "Then do another grid search for algorithms and hyperparameters. \n",
+        "\n",
+        "Next, we would normally assess feature importance\n",
+        "then evaluate the pipeline performance, but we can jump straight to performance evaluation."
       ]
     },
     {
@@ -1065,6 +1157,17 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We don’t have the capability of assessing the feature importance In this pipeline with the\n",
+        "PCA step, since the feature selection step was providing this information. \n",
+        "\n",
+        "This is a tradeoff,\n",
+        "where we expect the performance to increase with PCA at a cost of not assessing the best features."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "rKGmSgINCQwj"
       },
@@ -1087,6 +1190,25 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "No improvement compared to previous pipeline without. \n",
+        "\n",
+        "So, what should we do now?\n",
+        "\n",
+        "Most likely, in the workplace, you may want to spend longer trying to improve your performance\n",
+        "values by adjusting the hyperparameters, however, if it looks like your regression workflow, either\n",
+        "using the conventional steps or PCA step, does not meet your performance requirement, there is\n",
+        "another strategy you can consider. \n",
+        "\n",
+        "We can convert the ML task from regression to classification.\n",
+        "We will still keep predicting tenure for a prospect that will likely churn, but the prediction will\n",
+        "not be a number that relates to “month”; instead it will be a class related to a range of months.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "qpKz9qjRUOR0"
       },
@@ -1096,11 +1218,39 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The idea for converting Regression to Classification is pretty simple,\n",
+        "you need to discretize tenure, that means you will define ranges, and map each number to that range.\n",
+        "\n",
+        "The tenure variable then has values that relate to ranges of tenure;\n",
+        "therefore the pipeline will predict the range of tenure for a given prospect.\n",
+        "\n",
+        "The range is assigned according to the numerical distribution."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "g0yf7s9LVZFH"
       },
       "source": [
         "### Convert numerical target to bins, and check if it is balanced"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We are interested in getting balanced ranges, so we will use EqualFrequencyDiscretize,\n",
+        "which splits the number into equal frequency intervals, so that each interval has roughly\n",
+        "the same proportion of observations. That will lead to a target that's balanced.\n",
+        "\n",
+        "We will need to define how many intervals to split.\n",
+        "\n",
+        "We will try a few options and see how that fits our context.\n",
+        "Our context is this: we see that a prospect will likely churn; we don’t know when; it may be\n",
+        "in a few months, or it may be in years. So our concern is knowing if a prospect will churn soon."
       ]
     },
     {
@@ -1118,6 +1268,24 @@
         "print(f\"* The classes represent the following ranges: \\n{disc.binner_dict_} \\n\")\n",
         "sns.countplot(data=df_clf, x='tenure')\n",
         "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "with q=2: {'tenure': [-inf, 10.0, inf]} -> would 10 months be a good indication that a prospect will churn soon?\n",
+        "Probably not. Ideally, you would like to have a more granular range.\n",
+        "\n",
+        "with q=3: {'tenure': [-inf, 4.0, 20.0, inf]} -> We note the target is balanced and the ranges are\n",
+        "up to 4 months, from 4 to 20 months, and more than 20 months.\n",
+        "That is better. A prediction that the user will churn in “less than 4 months” is an indication the\n",
+        "prospect will churn soon, so the business would be able to intervene and look for options to convince\n",
+        "that person not to. Additionally, If a person is predicted to churn in more than 20 months,\n",
+        "I could intervene at a later time and focus on prospects that may churn soon.\n",
+        "\n",
+        "We could try with 4 or more ranges,\n",
+        "if the classifier using 3 ranges didn’t show relevant results."
       ]
     },
     {
@@ -1213,6 +1381,7 @@
       },
       "outputs": [],
       "source": [
+        "# We need to split the data, since the tenure variable changed\n",
         "X_train, X_test, y_train, y_test = train_test_split(\n",
         "    df_clf.drop(['tenure'], axis=1),\n",
         "    df_clf['tenure'],\n",
@@ -1250,6 +1419,7 @@
       },
       "outputs": [],
       "source": [
+        "# here without logisticRegression because its a multiclass problem\n",
         "models_quick_search = {\n",
         "    \"XGBClassifier\": XGBClassifier(random_state=0),\n",
         "    \"DecisionTreeClassifier\": DecisionTreeClassifier(random_state=0),\n",
@@ -1286,6 +1456,7 @@
       },
       "outputs": [],
       "source": [
+        "# choose same performance metric as for Churn (Recall min 0.8)\n",
         "from sklearn.metrics import make_scorer, recall_score\n",
         "quick_search = HyperparameterOptimizationSearch(models=models_quick_search, params=params_quick_search)\n",
         "quick_search.fit(X_train, y_train,\n",
@@ -1523,6 +1694,21 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The pipeline was trained on 3 features, however Monthly Charges is by far the most important.\n",
+        "\n",
+        "In theory, we would expect all features to contribute somehow to the feature importance,\n",
+        "but in this case only one feature is predominant. For simplicity, we will keep going. However,\n",
+        "you could refit the pipeline using only \"Monthly Charges\" as a feature\n",
+        "and check if it has equivalent performance to this pipeline. \n",
+        "\n",
+        "To simplify the notebook,\n",
+        "we're not going to add this extra complexity in this walkthrough."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "jiwI6U28UV4C"
       },
@@ -1624,6 +1810,31 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The pipeline meets the 80% on recall for “<4” on both train and test sets.\n",
+        "Similar behaviour happens for prospects with a tenure of more than 20 months.\n",
+        "The model is okay detecting that, meaning the model can separate this class from the others.\n",
+        "\n",
+        "However, the model is confused when a prospect has tenure between 4 and 20 months.\n",
+        "Note that the model tends to predict something else in train and test sets\n",
+        "when the prospect has tenure between 4 and 20 months. So that's a limitation.\n",
+        "\n",
+        "So should we consider this pipeline then?\n",
+        "\n",
+        "Well that is a discussion that you'd need to have between you and your stakeholders. \n",
+        "\n",
+        "First, we will need to\n",
+        "accept the limitation of tenure cases between 4 and 20 months. In this case, we acknowledge\n",
+        "that the recall and precision levels for '4 and 20 months' are not strong and when this is the case,\n",
+        "the ML model is not confident enough on how long the prospect would stay.\n",
+        "\n",
+        "In our case, since the classifier meets the primary requirement of\n",
+        "recall on \"<4\" months, then we will accept the classifier."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "mQ3u0TodDdOZ"
       },
@@ -1696,6 +1907,8 @@
         "        (\"feat_scaling\", StandardScaler()),\n",
         "\n",
         "        # feature selection is not needed\n",
+        "        \n",
+        "        # smartCorrelation selection is not needed\n",
         "\n",
         "        (\"model\", model),\n",
         "\n",
@@ -1979,6 +2192,16 @@
         "                        X_test=X_test, y_test=y_test,\n",
         "                        pipeline=pipeline_clf,\n",
         "                        label_map= label_map )"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "As expected, the feature importance is the same as previously.\n",
+        "As well as the performance.\n",
+        "We are happy with this pipeline, which is a classifier that needs\n",
+        "3 variables to predict tenure for a prospect that will likely churn soon."
       ]
     },
     {
@@ -2268,7 +2491,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
@@ -2282,14 +2505,9 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.12 (default, Sep 27 2022, 15:56:02) \n[GCC 9.4.0]"
+      "version": "3.12.8"
     },
-    "orig_nbformat": 2,
-    "vscode": {
-      "interpreter": {
-        "hash": "8b8334dab9339717f727a1deaf837b322d7a41c20d15cc86be99a8e69ceec8ce"
-      }
-    }
+    "orig_nbformat": 2
   },
   "nbformat": 4,
   "nbformat_minor": 2
